[package]
name = "xml_to_csv"
version = "0.1.0"
edition = "2021"
authors = ["Parker TenBroeck"]
homepage = "https://github.com/ParkerTenBroeck"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

xmltree = "0.10.3"
serde = {version = "1.0.1", features = ["derive"]}
serde_json = "1.0.1"
csv = "1.2.2"
clap = { version = "4.3", features = ["derive", "string"]}